# slides-xp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  publish.yml  python-app.yml
docker/: Dockerfile  production.docker-compose.yml  source.docker-compose.yml
slides_xp/: cli.py  components.py  file_picker.py  markdown.py  picker.py  server.py  slide.py  theme_fns.py  util.py
slides_xp/css/: main.css  root.css
slides_xp/javascript/: navigator.js
slides_xp/themes/default/: main.css
slides_xp/themes/xp/: __init__.py  main.css  slide.css
tests/: simple_test.py
