[project]
name = "slides-xp"
version = "0.1.0"
description = "A home-made, ultra-janky, Windows XP-themed markdown slideshow viewer."
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "pyhtml-enhanced (>=2.2.0,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "mistune (>=3.2.1,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "granian>=2.7.4",
    "asgiref>=3.11.1",
]
keywords = ['slides', 'slideshow', 'nostalgia', 'windows-xp', 'markdown']
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/MaddyGuthridge/slides-xp"
"Bug Tracker" = "https://github.com/MaddyGuthridge/slides-xp/issues"

[project.scripts]
sxp = "slides_xp.__main__:cli"
slides-xp = "slides_xp.__main__:cli"

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "mypy>=1.15.0,<2",
    "pytest>=9.0.3,<10",
    "types-pygments>=2.20.0.20260508,<3",
    "coverage>=7.6.12,<8",
]

[tool.uv]
# Exclude dependency releases newer than 1 week, in order to reduce supply-chain
# risk.
exclude-newer = "1 week"

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "slides_xp"
module-root = ""

source-include = [
    "py.typed",
    "css/*",
    "javascript/*",
    "themes/*",
]

[tool.mypy]
check_untyped_defs = true
files = ["slides_xp", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
